--- a/pom.xml
+++ b/pom.xml
@@ -10,43 +10,50 @@
 
     <properties>
         <!-- Scala version is linked with the artifact name so cannot move to parent pom.xml -->
-        <scala.version>2.12.6</scala.version>
-        <scala.binary.version>2.12</scala.binary.version>
+        <scala.version>2.11.12</scala.version>
+        <scala.binary.version>2.11</scala.binary.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
-            <version>1.0.0-beta2</version>
+            <version>1.0.0-beta4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-parallel-wrapper</artifactId>
+            <version>1.0.0-beta4</version>
+        </dependency>
+
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.2.3</version>
         </dependency>
 
-        <!--dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native-platform</artifactId>
-            <version>1.0.0-beta2</version>
-        </dependency-->
         <dependency>
             <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>1.0.0-beta4</version>
+        </dependency>
+        <!--dependency>
+            <groupId>org.nd4j</groupId>
             <artifactId>nd4j-cuda-9.2-platform</artifactId>
-            <version>1.0.0-beta2</version>
+            <version>1.0.0-beta3</version>
         </dependency>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-cuda-9.2</artifactId>
-            <version>1.0.0-beta2</version>
+            <version>1.0.0-beta3</version>
         </dependency>
         <dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>cuda</artifactId>
             <version>9.2-7.1-1.4.2</version>
             <classifier>windows-x86_64-redist</classifier>
-        </dependency>
+        </dependency-->
     </dependencies>
 
     <build>
