--- a/pom.xml
+++ b/pom.xml
@@ -47,14 +47,16 @@
         <!--dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-cuda-9.2-platform</artifactId>
-            <version>1.0.0-beta3</version>
+            <version>1.0.0-beta4</version>
         </dependency>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-cuda-9.2</artifactId>
-            <version>1.0.0-beta3</version>
-        </dependency>
-        <dependency>
+            <version>1.0.0-beta4</version>
+        </dependency-->
+
+        <!-- If you don't have CUDA installed also use the following dependency. -->
+        <!--dependency>
             <groupId>org.bytedeco.javacpp-presets</groupId>
             <artifactId>cuda</artifactId>
             <version>9.2-7.1-1.4.2</version>
