--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,25 @@
     <artifactId>dl4j-tester_${scala.binary.version}</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>  <!-- Optional, update daily -->
+            </snapshots>
+        </repository>
+    </repositories>
+
     <properties>
         <!-- Scala version is linked with the artifact name so cannot move to parent pom.xml -->
         <scala.version>2.11.12</scala.version>
         <scala.binary.version>2.11</scala.binary.version>
+        <dl4j.version>1.0.0-SNAPSHOT</dl4j.version>
     </properties>
 
     <dependencies>
@@ -24,13 +39,13 @@
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-core</artifactId>
-            <version>1.0.0-beta4</version>
+            <version>${dl4j.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.deeplearning4j</groupId>
             <artifactId>deeplearning4j-parallel-wrapper</artifactId>
-            <version>1.0.0-beta4</version>
+            <version>${dl4j.version}</version>
         </dependency>
 
         <dependency>
@@ -41,8 +56,21 @@
 
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native-platform</artifactId>
-            <version>1.0.0-beta4</version>
+            <artifactId>nd4j-cuda-10.0-platform</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-cuda-10.0</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- If you don't have CUDA installed also use the following dependency. -->
@@ -60,13 +88,13 @@
             <dependencies>
                 <dependency>
                     <groupId>org.nd4j</groupId>
-                    <artifactId>nd4j-cuda-9.2-platform</artifactId>
-                    <version>1.0.0-beta4</version>
+                    <artifactId>nd4j-cuda-10.0-platform</artifactId>
+                    <version>${dl4j.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.deeplearning4j</groupId>
-                    <artifactId>deeplearning4j-cuda-9.2</artifactId>
-                    <version>1.0.0-beta4</version>
+                    <artifactId>deeplearning4j-cuda-10.0</artifactId>
+                    <version>${dl4j.version}</version>
                 </dependency>
             </dependencies>
         </profile>
